--- a/DAA_M07_CS2.ipynb
+++ b/DAA_M07_CS2.ipynb
@@ -56,7 +56,7 @@
     "# Packages for data management.\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "# another test wow this is working\n",
+    "# another test w\n",
     "#not to authenticate SSL certificate\n",
     "import ssl \n",
     "ssl._create_default_https_context = ssl._create_unverified_context\n",
